language_tests/source_files/invalid/for_loops.tr

struct NotIterable {
    x: int32
}

func main() {
    let n = NotIterable { x: 1 }
    // Should fail because NotIterable doesn't implement Iterable
    for i in n {
        std.print(i)
    }
}
